Make backwards compatible to Java 1.8